--- a/.github/workflows/gradle.yaml
+++ b/.github/workflows/gradle.yaml
@@ -31,5 +31,8 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
+      - name: Change wrapper permissions
+        run: chmod +x ./gradlew
+
       - name: Execute Gradle build
         run: ./gradlew build
