--- a/.github/workflows/build_on_push.yaml
+++ b/.github/workflows/build_on_push.yaml
@@ -9,6 +9,8 @@ name: Java CI with Gradle
 
 on:
   push:
+    tags-ignore:
+      - '*.*' # We don't want this to run on release
   pull_request:
 
 permissions:
