--- a/.github/workflows/release_on_tag.yaml
+++ b/.github/workflows/release_on_tag.yaml
@@ -36,12 +36,13 @@ jobs:
       - name: Execute Gradle build
         run: ./gradlew build
 
-      - name: Upload binaries to release
-        uses: svenstaro/upload-release-action@v2
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: build/libs/GradlePlugin-1.0-SNAPSHOT.jar
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+          asset_path: build/libs/GradlePlugin-1.0-SNAPSHOT.jar
           asset_name: GradlePlugin-1.0-SNAPSHOT.jar
-          tag: ${{ github.ref }}
-          overwrite: true
-          body: "This is my release text"
+#          asset_content_type: application/jars
