github actions changes

--- a/.github/workflows/build_on_release.yaml
+++ b/.github/workflows/build_on_release.yaml
@@ -7,10 +7,7 @@
 
 name: Java CI with Gradle
 
-on:
-  push:
-    tags:
-      - 'v*'
+on: release
 
 permissions:
   contents: read
@@ -36,13 +33,9 @@ jobs:
       - name: Execute Gradle build
         run: ./gradlew build
 
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
+      - name: Upload to release
+        uses: JasonEtco/upload-to-release@master
+        with:
+          args: build/libs/GradlePlugin-1.0-SNAPSHOT.jar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: build/libs/GradlePlugin-1.0-SNAPSHOT.jar
-          asset_name: GradlePlugin-1.0-SNAPSHOT.jar
-#          asset_content_type: application/jars
